# divio-cli

./: .env-example  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.rst  DESCRIPTION.md  Dockerfile  Dockerfile.test  LICENSE.txt  MANIFEST.in  Makefile  PKG-INFO  README.md  README.rst  appveyor.yml  deploy-linux.sh  deploy.bat  deploy.sh  docker-compose.yml  pyproject.toml  requirements-build.txt  requirements-windows.txt  requirements.in  requirements.txt  requirements_gui.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
aldryn_client/: __init__.py  aldryngui.kv  api_requests.py  build.sh  check_system.py  cli.py  client.py  cloud.py  config.py  exceptions.py  forms.py  git_sync.py  main.py  messages.py  settings.py  setup.py  sync.py  sync_helpers.py  utils.py  utils_kivy.py
aldryn_client/localdev/: main.py  utils.py
aldryn_client/management/commands/: cmscloud_dumpdata.py  cmscloud_loaddata.py
aldryn_client/resources/: appIcon.icns  deploy.sh
aldryn_client/resources/linux32/libexec/git-core/: git-sh-i18n
aldryn_client/resources/linux64/libexec/git-core/: git-sh-i18n
aldryn_client/resources/mac_osx/libexec/git-core/: git-sh-setup
aldryn_client/resources/windows/libexec/git-core/: git-pull  git-sh-setup
aldryn_client/upload/: addon.py  boilerplate.py  common.py
aldryn_client/validators/: addon.py  boilerplate.py  common.py
cmscloud_client/: build.sh  cli.py  client.py  cmscloudgui.kv  git_sync.py  http_server.py  main.py  serialize.py  setup.py  sync.py  sync_helpers.py  utils.py  utils_kivy.py
cmscloud_client/kivy_gui/: main.py
cmscloud_client/management/commands/: cmscloud_dumpdata.py  cmscloud_loaddata.py
cmscloud_client/packaging/AldrynCloud.app/: SDL  appIcon.icns  libc.dylib  libfreetype.6.dylib  libyaml-0.2.dylib  mikmod  sync.py
cmscloud_client/packaging/AldrynCloud.app/AldrynCloud.app/: AldrynCloud  SDL_ttf  cli.py  main.py
cmscloud_client/packaging/AldrynCloud.app/AldrynCloud.app/packaging/AldrynCloud.app/: SDL_image  SDL_mixer  client.py
cmscloud_client/packaging/AldrynCloud.app/AldrynCloud.app/resources/: info.plist
cmscloud_client/packaging/AldrynCloud.app/management/commands/: cmscloud_dumpdata.py
cmscloud_client/resources/: appIcon.icns  deploy.sh
cmscloud_client/resources/mac_osx/libexec/git-core/: git-pull  git-sh-i18n
divio_cli/: __init__.py  api_requests.py  app_template.py  check_system.py  cli.py  client.py  cloud.py  config.py  context.py  create_app_wizard_utils.py  crypto.py  excepthook.py  exceptions.py  forms.py  messages.py  settings.py  utils.py  widgets.py  wizards.py  wizards_utils.py
divio_cli/domain_models/: app_template.py
divio_cli/localdev/: __init__.py  backups.py  main.py  push.py  sync_s3.py  utils.py
divio_cli/test/: conftest.py  test_api_responses.py  test_commands.py  test_context.py  test_deployments_commands.py  test_environment_variables_commands.py  test_exceptions.py  test_localdev_backups.py  test_localdev_push.py  test_localdev_utils.py  test_project_settings.py  test_utils.py
divio_cli/upload/: addon.py  boilerplate.py  common.py
divio_cli/validators/: addon.py  boilerplate.py  common.py
scripts/: build-linux  build-osx  build-unix  build-unix.sh  build-windows.ps1  divio.sh  entrypoint.py  shell.sh  test-unix.sh
test/: conftest.py  test_check.py  test_commands.py  test_env.py  test_localdev_utils.py  test_utils.py
tests/: conftest.py  test_windows.py
