[build-system]
requires = [
  # sync with setup.py until we discard non-pep-517/518
  "setuptools>=42.0",
  # setuptools-scm pinned because of change of the version parsing in version 6.3
  "setuptools-scm[toml]<6.3",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.check-manifest]
ignore = [
  "tox.ini",
  "requirements.in",
  "requirements-windows.in",
  "Makefile",
  ".gitlab-ci.yml",
  "divio_cli/version.py"
]

[tool.setuptools_scm]
# write_to needs to be duplicated in setup.py for compatibility reasons
write_to = "divio_cli/version.py"

[tool.ruff]
    extend = "/presets/ruff.toml"