[tool:pytest]
markers =
    integration


[flake8]
exclude =
    divio_cli/test/data

[metadata]
name = divio-cli
license_files = LICENSE.txt
license = BSD
author = Divio AG
author_email = info@divio.com
description = The command-line client for the Divio Cloud
long_description = 
    The Divio CLI is a tool for interacting with Divio projects and the Divio cloud infrastructure.
    
    It provides commands to set up projects locally, push and pull media and database content to
    remote cloud projects, get and set environment variables, and so on.
    
    How to get started with the Divio CLI: https://docs.divio.com/en/latest/how-to/local-cli/
    
    Divio CLI reference: https://docs.divio.com/en/latest/reference/divio-cli
url = https://docs.divio.com/en/latest/how-to/local-cli/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
platforms = OS Independent

[options]
packages = find:
include_package_data = true
setup_requires = setuptools_scm[toml]
zip_safe = no

[options.entry_points]
console_scripts =
    divio = divio_cli.cli:cli

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    NOCOV

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:
    raise AssertionError
    raise NotImplementedError

precision = 2
[coverage:html]
directory = artifacts/htmlcov

[coverage:run]
branch = true
source = .
